bug fix wiht register page and added footer

--- a/mvc/views/login.ejs
+++ b/mvc/views/login.ejs
@@ -16,14 +16,14 @@
   </head>
 
   <body class="bg-gradient-primary">
-    <div class="container mt-5">
+    <div class="container my-5">
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <div class="card shadow-lg o-hidden border-0 my-5">
+          <div class="card shadow-lg o-hidden border-0 my-4">
             <div class="card-body p-0">
               <div class="row">
                 <div class="col-lg-6 col-lg-12 col-12">
-                  <div class="p-5">
+                  <div class="px-5 pt-3 pb-4">
                     <div class="text-center">
                       <h4 class="text-dark mb-4">Welcome Back!</h4>
                       <% if (message) { %>
@@ -80,6 +80,23 @@
         </div>
       </div>
     </div>
+        <section class="">
+      <!-- Footer -->
+      <footer class="text-center text-white fixed-bottom bg-dark">
+        <!-- Copyright -->
+        <div
+          class="text-center p-3"
+          style="background-color: rgba(0, 0, 0, 0.2)"
+        >
+           Designed By:
+          <a class="text-white" href="#"
+            >HD</a
+          >
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!-- Footer -->
+    </section>
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jquery.easing.js"></script>
