--- a/mvc/views/register.ejs
+++ b/mvc/views/register.ejs
@@ -20,14 +20,14 @@
     <script src="../../js/index.js"></script>
   </head>
   <body class="bg-gradient-primary">
-    <div class="container mt-5">
+    <div class="container my-5">
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <div class="card shadow-lg border-0 my-5">
+          <div class="card shadow-lg border-0 my-4">
             <div class="card-body p-0 ">
               <div class="row">
                 <div class="col-lg-6 col-lg-12 col-12">
-                  <div class="p-4">
+                  <div class="px-5 pt-3 pb-4">
                     <div class="text-center">
                       <h4 class="text-dark mb-4">Register New User</h4>
                       <% if (message) { %>
@@ -183,9 +183,9 @@
                           </script>
                         </div>
                       </div>
-                      <div class="d-grid gap-2 col-6 mx-auto">
+                      <div class="form-group">
                       <button
-                        class="btn btn-primary"
+                        class="btn btn-primary btn-block text-white"
                         
                         type="submit"
                       >
@@ -201,5 +201,22 @@
         </div>
       </div>
     </div>
+     <section class="">
+      <!-- Footer -->
+      <footer class="text-center text-white fixed-bottom bg-dark">
+        <!-- Copyright -->
+        <div
+          class="text-center p-3"
+          style="background-color: rgba(0, 0, 0, 0.2)"
+        >
+           Designed By:
+          <a class="text-white" href="#"
+            >HD</a
+          >
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!-- Footer -->
+    </section>
   </body>
 </html>
