--- a/mvc/views/upload.ejs
+++ b/mvc/views/upload.ejs
@@ -16,9 +16,9 @@
   </head>
 
   <body class="bg-gradient-primary">
-    <div class="container my-5">
-      <div class="row justify-content-center">
-        <div class="col-md-6">
+    <div class="container">
+      <div class="row h-100 w-100 align-items-center justify-content-center">
+        <div class="col-md-8 col-lg-">
           <div class="card shadow-lg border-0 my-4">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item col-6 px-0" role="presentation">
@@ -228,11 +228,16 @@
           class="text-center p-3"
           style="background-color: rgba(0, 0, 0, 0.2)"
         >
-           Designed By:
-          <a class="text-white" href="#"
+           This Project is Under MIT License Designed By:
+          <a class="hover-color" href="https://twitter.com/HameemDkl"
             >HD</a
           >
-        </div>
+          
+          |  
+          <a class="hover-color" href="https://github.com/HameemDakheel/EEE-Upload-Server"
+            >Source Code</a
+          >
+          </div>
         <!-- Copyright -->
       </footer>
       <!-- Footer -->
